# DialogboxApp

./: CMakeLists.txt  README.md
Dialog/: CMakeLists.txt  dialog.c  dialog.h
Dialog/Container/: container.c  container.h
Dialog/Controls/: ctrlControl.c  ctrlControl.h  ctrlGauge.c  ctrlGauge.h  ctrlLabel.c  ctrlLabel.h  ctrlLineEdit.c  ctrlLineEdit.h
src/: main.c
